# actualpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: mypy.yaml  pre-commit.yaml  publish.yaml  test.yaml  try-build-docs.yaml  try-build.yaml
actual/: __init__.py  api.py  budgets.py  crypto.py  database.py  exceptions.py  migrations.py  models.py  protobuf_models.py  queries.py  rules.py  schedules.py  version.py
actual/api/: __init__.py  bank_sync.py  models.py
actual/cli/: config.py  formatters.py  main.py  models.py
actual/utils/: changeset.py  conversions.py  openid.py  storage.py  title.py
docker/: compose.yaml  docker-compose.yml
docs/: FAQ.md  command-line-interface.md  experimental-features.md  index.md  requirements.txt
docs/API-reference/: actual.md  budgets.md  changeset.md  endpoints.md  exceptions.md  models.md  queries.md  rules.md  schedules.md  utils.md
docs/api/: api.md  models.md  queries.md
docs/examples/: converting-a-gnucash-budget-to-actual.md  getting-budget-information.md  importing-a-custom-csv-file.md  index.md  listening-to-changes.md  log-in-with-openid.md  using-endpoints.md
examples/change/: README.md  change_handler.py
examples/csv/: README.md  import.py
examples/csv/files/: transactions.csv
examples/gnucash/: README.md  import.py
examples/gnucash/files/: example.gnucash
tests/: conftest.py  test_api.py  test_bank_sync.py  test_budgets.py  test_cli.py  test_crypto.py  test_database.py  test_integration.py  test_models.py  test_openid.py  test_protobuf.py  test_rules.py  test_schedules.py
