[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "actualpy"
description = "Implementation of the Actual API to interact with Actual over Python."
readme = "README.md"
authors = [
    { name = "Brunno Vanelli", email = "brunnovanelli@gmail.com" }
]
requires-python = ">=3.10.0"
dependencies = [
    "httpx>=0.27",
    "sqlmodel>=0.0.18",
    "pydantic>=2,<3",
    "sqlalchemy>=2",
    "proto-plus>=1",
    "protobuf>=4",
    "cryptography>=42",
    "python-dateutil>=2.9.0",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["actual", "actualbudget", "api", "client"]
dynamic = ["version"]

[project.optional-dependencies]
cli = [
    "rich>=13",
    "typer>=0.12.0",
    "pyyaml>=6",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "testcontainers",
    "pre-commit",
    "mypy",
    "types-python-dateutil",
    "types-PyYAML",
    "docker>=7.1.0",
    "freezegun",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.0",
    "mkdocs-material-extensions==1.3.1",
    "mkdocstrings==0.30.1",
    "mkdocstrings-python==1.19.0",
    "griffe==1.15.0",
    "griffe-fieldz==0.3.0",
    "black==25.11.0",
]

[project.urls]
Homepage = "https://github.com/bvanelli/actualpy"
Documentation = "https://actualpy.readthedocs.io/"
Repository = "https://github.com/bvanelli/actualpy.git"
"Bug Tracker" = "https://github.com/bvanelli/actualpy/issues"

[project.scripts]
actualpy = "actual.cli.main:app"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*", "examples*"]

[tool.setuptools.package-data]
actual = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "actual.version.__version__" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle: error and warning
    "E",
    "W",
    # pyupgrade
    "UP",
    # PyFlakes
    "F",
    # isort
    "I",
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.mypy]
plugins = ["pydantic.mypy"]
## TODO: Work one by one until we can enable --strict mode for mypy.
# disallow_any_generics = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["proto", "proto.*", "testcontainers", "testcontainers.*"]
ignore_missing_imports = true
